2006-10-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py (ifile): Remove all methods that
	call the base class method and propagate the return value to
	ifile. This is now done by path itself.

2006-10-15  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ipapi.py (IPApi.__init__): Added new entry to public
	api: set_crash_handler(), to expose the ability to change the
	internal crash handler.

	* IPython/CrashHandler.py (CrashHandler.__init__): abstract out
	the various parameters of the crash handler so that apps using
	IPython as their engine can customize crash handling.  Ipmlemented
	at the request of SAGE.

2006-10-14  Ville Vainio  <vivainio@gmail.com>

	* Magic.py, ipython.el: applied first "safe" part of Rocky 
	Bernstein's patch set for pydb integration.

	* Magic.py (%unalias, %alias): %store'd aliases can now be
	removed with '%unalias'. %alias w/o args now shows most 
	interesting (stored / manually defined) aliases last
	where they catch the eye w/o scrolling.

	* Magic.py (%rehashx), ext_rehashdir.py: files with
	'py' extension are always considered executable, even
	when not in PATHEXT environment variable.

2006-10-12  Ville Vainio  <vivainio@gmail.com>

	* jobctrl.py: Add new "jobctrl" extension for spawning background
	processes with "&find /". 'import jobctrl' to try it out. Requires
	'subprocess' module, standard in python 2.4+.
	
	* iplib.py (expand_aliases, handle_alias): Aliases expand transitively, 
	so if foo -> bar and bar -> baz, then foo -> baz.

2006-10-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (Magic.parse_options): add a new posix option
	to allow parsing of input args in magics that doesn't strip quotes
	(if posix=False).  This also closes %timeit bug reported by
	Stefan.

2006-10-03  Ville Vainio  <vivainio@gmail.com>

	* iplib.py (raw_input, interact): Return ValueError catching for 
	raw_input. Fixes infinite loop for sys.stdin.close() or 
	sys.stdout.close().
