@@ -1,3 +1,9 @@
+2006-10-28  Ville Vainio  <vivainio@gmail.com>
+
+	* Magic.py (%run): Save and restore the readline history from 
+	file around %run commands to prevent side effects from 
+	%runned programs that might use readline (e.g. pydb).
+
 2006-10-23  Walter Doerwald  <walter@livinglogic.de>
 
 	* IPython/Extensions/ipipe.py (ifile): Remove all methods that
